fixed image distortion bug for larger screens

--- a/frontend/src/components/Boutiques/Boutiques.css
+++ b/frontend/src/components/Boutiques/Boutiques.css
@@ -17,7 +17,8 @@ position: relative;
 display: inline-block;
 }
 
-.text-over-banner {
+
+  /* .text-over-banner {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -27,7 +28,7 @@ display: inline-block;
     padding: 1rem 0;
     margin-left: 1060px;
     margin-top: -2px;
-  }
+  } */
 
 .text{
     font-weight: lighter;
@@ -134,6 +135,27 @@ display: inline-block;
     font-family: sans-serif;
     font-weight: bold;
     color: #FF5A5F;
+}
+
+
+@media screen and (min-width: 769px) {
+
+
+    .text-over-banner {
+        position: absolute;
+        top: 50%;
+        right: 70px; /* Adjust this value to set the desired margin */
+        transform: translateY(-50%);
+        text-align: center;
+        color: #fff;
+        font-family: "Open Baskerville";
+        padding: 1rem 0;
+        line-height: 1.3;
+        /* Additional styles can be added as needed */
+      }
+
+
+    
 }
 
 
