--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -107,3 +107,19 @@ body{
 }
 
 
+@media screen and (min-width: 769px) {
+
+    .logo-container {
+    
+        margin-left: 30px; /* Remove any previous margin that centered it */
+        margin-right: auto; /* Push it to the left side of its containing element */
+      }
+
+      .li-elements-profile-button-loggedIn{
+        list-style: none;
+        align-items: flex-end;
+        margin-right: 25px;
+    }
+    }
+
+
